feat: added get user data privacy settings
