# static/swagger.yaml
@@ -263,7 +263,7 @@ paths:
                         properties:
                           id:
                             type: string
-                            example: "user_id_here"
+                            example: "userId_here"
                           email:
                             type: string
                             example: "user@example.com"
@@ -355,7 +355,7 @@ paths:
                         properties:
                           id:
                             type: string
-                            example: "user_id_here"
+                            example: "userId_here"
                           email:
                             type: string
                             example: "user@example.com"
@@ -1144,7 +1144,7 @@ paths:
                 $ref: '#/components/schemas/ServerErrorSchema'
 
 
-    /newsletter-subscription/deleted:
+  /newsletter-subscription/deleted:
     get:
       tags:
         - newsletter
@@ -1681,7 +1681,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ServerErrorSchema'
 
-  /users/{user_id}/regions:
+  /users/{userId}/regions:
     get:
       tags:
         - user
@@ -1690,7 +1690,7 @@ paths:
         - bearerAuth: []
       description: Retrieves the region information for a specific user.
       parameters:
-        - name: user_id
+        - name: userId
           in: path
           required: true
           schema:
@@ -1737,7 +1737,7 @@ paths:
         - bearerAuth: []
       description: Updates the region for a specific user.
       parameters:
-        - name: user_id
+        - name: userId
           in: path
           required: true
           schema:
@@ -1774,6 +1774,54 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UnprocessedEntityErrorSchema'
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ServerErrorSchema'
+
+  /users/{userId}/data-privacy-settings:
+    get:
+      tags:
+        - user
+      summary: Get user data privacy settings
+      security:
+        - bearerAuth: []
+      description: Retrieves the data privacy information for a specific user.
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+          description: ID of the user to retrieve the data privacy information for.
+      responses:
+        '200':
+          description: User data privacy settings retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDataPrivacySchema'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequestErrorSchema'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnauthorizedErrorSchema'
+        '404':
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFoundErrorSchema'
         '500':
           description: Server error
           content:
@@ -4322,7 +4370,7 @@ paths:
                             notification_id:
                               type: string
                               example: 01910c39-01e0-73b7-bed9-d326a6ea5197
-                            user_id:
+                            userId:
                               type: string
                               example: 01910b39-01e0-73b7-bed9-d326a6ea5197
                             message:
@@ -5766,7 +5814,7 @@ components:
               type: string
               format: uuid
               example: 019109d8-a5a6-7f4d-a3ec-ee3bd0383ee5
-            user_id:
+            userId:
               type: string
               format: uuid
               example: 019109d8-a5a6-7f47-8cc5-d9b3f62293f8
@@ -6055,7 +6103,7 @@ components:
     addUserToOrganizationReq:
       type: object
       properties:
-        user_id:
+        userId:
           type: string
           format: uuid
           example: 01910544-d1e1-7ada-bdac-c761e527ec91
@@ -6221,6 +6269,84 @@ components:
         - email
         - subject
         - message
+
+    UserDataPrivacySchema:
+      type: object
+      properties:
+        status:
+          type: string
+          example: success
+        status_code:
+          type: integer
+          example: 200
+        message:
+          type: string
+          example: User data privacy settings retrieved successfully
+        data:
+          type: object
+          properties:
+            id:
+              type: string
+              format: uuid
+              example: 01913139-0969-7ed5-a830-2f20f6b2c4e7
+            user_id:
+              type: string
+              format: uuid
+              example: 0191289e-fba3-7674-85bb-0c4a63ed8ebf
+            profile_visibility:
+              type: boolean
+              example: false
+            share_data_with_partners:
+              type: boolean
+              example: false
+            receive_email_updates:
+              type: boolean
+              example: false
+            enable_2fa:
+              type: boolean
+              example: false
+            use_data_encryption:
+              type: boolean
+              example: false
+            allow_analytics:
+              type: boolean
+              example: false
+            personalized_ads:
+              type: boolean
+              example: false
+            created_at:
+              type: string
+              format: date-time
+              example: 2024-08-08T10:01:47.242+01:00
+            updated_at:
+              type: string
+              format: date-time
+              example: 2024-08-08T10:01:47.242+01:00
+
+    UserDataPrivacyUpdateSchema:
+      type: object
+      properties:
+        profile_visibility:
+          type: boolean
+          example: false
+        share_data_with_partners:
+          type: boolean
+          example: false
+        receive_email_updates:
+          type: boolean
+          example: false
+        enable_2fa:
+          type: boolean
+          example: true
+        use_data_encryption:
+          type: boolean
+          example: false
+        allow_analytics:
+          type: boolean
+          example: true
+        personalized_ads:
+          type: boolean
+          example: true
 
   responses:
     UnauthorizedError:
